[package]
name = "typed_macros"
version = "1.0.3"
edition = "2021"
license = "MIT"
description = "Adds typing to your macro's arguments, making it a lot less of a pain to deal with them."
homepage = "https://github.com/blyxyas/typed_macros"
repository = "https://github.com/blyxyas/typed_macros"
readme = "README.md"
documentation = "https://docs.rs/typed_macros"
keywords = ["macro", "macros", "utility"]
categories = ["development-tools", "development-tools::testing", "rust-patterns"]

exclude = [
	"rustfmt.toml",
	".gitignore"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
